// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-cta/Button renders correctly 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
>
  <Text
    allowFontScaling={true}
    style={
      Array [
        Object {
          "color": "#20242D",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 19,
        },
        Array [
          Object {
            "color": "#FFF",
            "fontSize": 18,
            "fontWeight": "600",
            "marginHorizontal": 10,
          },
          undefined,
        ],
      ]
    }
  >
    text
  </Text>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly disabled 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#9BA1B0",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly fixed 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly large 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly loading 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "transform": Array [
          Object {
            "rotate": "0deg",
          },
        ],
      }
    }
  >
    <SvgMock
      fill="#FFF"
    />
  </View>
</View>
`;

exports[`@npm/mobydick-cta/Button renders correctly secondary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "rgba(43, 120, 238, 0.15)",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly small 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": undefined,
      "backgroundColor": "#2B78EE",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 10,
    }
  }
/>
`;

exports[`@npm/mobydick-cta/Button renders correctly tertiary 1`] = `
<View
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "stretch",
      "alignSelf": "stretch",
      "backgroundColor": "transparent",
      "borderRadius": 12,
      "flexDirection": "row",
      "justifyContent": "center",
      "opacity": 1,
      "padding": 12,
    }
  }
/>
`;
